k8s/03-main-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
  namespace: evpay
spec:
  replicas: 2
  selector: { matchLabels: { app: main-app } }
  template:
    metadata: { labels: { app: main-app } }
    spec:
      containers:
      - name: web
        image: docker.io/b1yaka/ewovaleron-pay-web:latest
        ports: [{ containerPort: 8000 }]
        readinessProbe: { httpGet: { path: "/", port: 8000 }, initialDelaySeconds: 10 }
        livenessProbe:  { httpGet: { path: "/", port: 8000 }, initialDelaySeconds: 20 }
