k8s/04-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-worker
  namespace: evpay
spec:
  replicas: 1
  selector: { matchLabels: { app: main-worker } }
  template:
    metadata: { labels: { app: main-worker } }
    spec:
      containers:
      - name: worker
        image: docker.io/b1yaka/ewovaleron-pay-web:latest
        command: ["bash","-lc","celery -A config.celery_app worker -l info -c 2 --prefetch-multiplier=16"]
