k8s/05-pay-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-api
  namespace: evpay
spec:
  replicas: 2
  selector: { matchLabels: { app: pay-api } }
  template:
    metadata: { labels: { app: pay-api } }
    spec:
      containers:
      - name: api
        image: docker.io/b1yaka/ewovaleron-pay-api:latest
        command: ["uvicorn","app.main:app","--host","0.0.0.0","--port","8000"]
        ports: [{ containerPort: 8000 }]
        readinessProbe: { httpGet: { path: "/health", port: 8000 }, initialDelaySeconds: 5 }
        livenessProbe:  { httpGet: { path: "/health", port: 8000 }, initialDelaySeconds: 10 }
