k8s/09-payment-listener-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-listener
  namespace: evpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-listener
  template:
    metadata:
      labels:
        app: payment-listener
    spec:
      containers:
      - name: listener
        image: docker.io/b1yaka/ewovaleron-pay-web:latest
        command: ["/bin/sh", "-lc", "python manage.py payment_listener"]
