k8s/10-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-bot
  namespace: evpay
spec:
  replicas: 1
  selector:
    matchLabels: { app: tg-bot }
  template:
    metadata:
      labels: { app: tg-bot }
    spec:
      containers:
        - name: tg-bot
          image: docker.io/b1yaka/ewovaleron-pay-bot:latest
          imagePullPolicy: Always
          resources:
            requests: { cpu: "50m",  memory: "128Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }
          readinessProbe:
            exec:
              command: ["python","-c","print('ok')"]
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            exec:
              command: ["python","-c","print('ok')"]
            initialDelaySeconds: 30
            periodSeconds: 30
