k8s/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app
  namespace: evpay
spec:
  selector: { app: main-app }
  ports: [{ port: 8000, targetPort: 8000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: pay-api
  namespace: evpay
spec:
  selector: { app: pay-api }
  ports: [{ port: 8000, targetPort: 8000 }]
